deployments/worker.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: worker
  labels:
    name: worker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  namespace: worker
spec:
  selector:
    matchLabels:
      name: worker
  template:
    metadata:
      labels:
        name: worker
        app: worker
    spec:
      containers:
      - name: worker
        image: resilience-test/worker:v1.0.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: worker-svc
  namespace: worker
spec:
  selector:
    name: worker
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
---
