deployments/deny-server-egress-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-server-egress
  namespace: server
spec:
  endpointSelector:
    matchLabels:
      app: server
      name: server
  egress: 
  - {}
